# de-course

./: .gitignore  README.md  pyproject.toml
numpy_tasks/: arrays.py  utils.py
numpy_tasks/src/: array_manipulation.py  arrays.py  data_handling.py  ecommerce_processing.py  utils.py
numpy_tasks/tests/: test_array_manipulation.py  test_arrays.py  test_data_handling.py  test_ecommerce_processing.py
pandas_tasks/data/: time_series_airbnb_data.csv
pandas_tasks/src/: advanced_manipulation.py  data_exploration.py  data_processing.py  utils.py
